# orbital-ground-watch

./: .gitignore  README.md  evaluate.py  predict.py  pyproject.toml  run_configs.toml  train.py  train_model_from_config.py
configs/: model_config_01.toml  model_config_02.toml
model_managers/: abstract_model_manager.py  snunet_model_manager.py
models/: UNet_3Plus.py  deformable_grid.py  encoder.py  scratch_former.py  sunet.py  sunet_plus.py  unet_parts.py
scripts/: data_splitter.py  display_change_detection.py  transposer.py
utils/: dataset.py  dice_score.py  display_utils.py  dist_utils.py  logger_visuals.py  metric_tool.py  misc_utils.py  scheduler.py  training_config.py
